# cocky

./: scratch.py
cocky_msgs/: CMakeList.txt  package.xml
duckiebot_interface/launch/: duckie.launch
duckiebot_interface/misc/: 99-duckiebot.rules  setup.sh
duckietown_msgs/: CMakeLists.txt
duckietown_msgs/msg/: WheelTicks.msg
hat_driver/: CMakeLists.txt  package.xml
hat_driver/include/hat_driver/: utils.py
led_driver/config/led_driver_node/: default.yaml
led_driver/src/: led_driver_node.py
wheel_encoder/: package.xml  setup.py
wheel_encoder/include/wheel_encoder/: wheel_encoder_driver.py
wheel_encoder/launch/: wheel_encoder_node.launch
wheel_encoder/src/: wheel_encoder_node.py
wheels_driver/: CMakeLists.txt  package.xml
wheels_driver/launch/: wheels_driver_node.launch
wheels_driver/src/: wheels_driver_node.py
