<?xml version="1.0"?>
<package>
    <name>wheel_encoder</name>
    <version>1.0.0</version>
    <description>A ROS interface to the wheel encoders</description>

    <author email="ijsalman@email.sc.edu">Ibrahim Salman</author>
    <maintainer email="ijsalman@email.sc.edu">Ibrahim Salman</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>duckietown_msgs</build_depend>
    <build_depend>rospy</build_depend>

    <run_depend>duckietown_msgs</run_depend>
    <run_depend>rospy</run_depend>
</package>
